plugins {
    id "org.sonarqube" version "2.7"
}


allprojects {
    group 'org.svgroz.vacationdb'
    version '1.0-SNAPSHOT'

    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'

    java {
        sourceCompatibility = JavaVersion.VERSION_11
        targetCompatibility = JavaVersion.VERSION_11
    }

    plugins.withType(JavaPlugin) {
        dependencies {
            testImplementation('org.junit.jupiter:junit-jupiter:5.6.2')
        }

        test {
            useJUnitPlatform()
        }
    }
}
